сделала главную страницу

--- a/index.html
+++ b/index.html
@@ -19,5 +19,32 @@
             </div>
         </div>
     </header>
+
+    <main>
+        <div class="section-me">
+            <div class="container">
+                <h2>ОБО МНЕ</h2>
+                <div class="inf">
+                    <div class="one">
+                        <img src="./img/i.jpg" alt="">
+                    </div>
+                    <div class="two">
+                        <div class="card">
+                            <h3>Краткая информация</h3>
+                            <p>Я Румянцева Яна. Мне 18 лет. Студентка Нижегородского Губернского колледжа по специальности web-разработчик. </p>
+                        </div>
+                        <div class="card">
+                            <h3>Cпорт</h3>
+                            <p>Я занималась фигурным катанием с 2011 года. Выступала на различных соревнованиях, а так же были показательные выступления на хоккейных играх. В 2016 году заняла первое место среди области, так же отбиралась на чемпионат России, но не прошла. Закончила карьеру в 2018 году по причине ухода моего тренера.</p>
+                        </div>
+                        <div class="card">
+                            <h3>Музыка</h3>
+                            <p>Я люблю слушать музыку и являюсь меломаном, но больше меня привлекает реп новой школы. Хожу я в наушниках почти всегда, поэтому для меня страх, если они сядут. </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
