сделала страницу со скилами

--- a/index.html
+++ b/index.html
@@ -45,6 +45,27 @@
                 </div>
             </div>
         </div>
+
+        <div class="section-skills">
+            <div class="container">
+                <h2>СКИЛЛЫ</h2>
+                <div class="skils">
+                   <div class="txt">
+                        <div class="card">
+                            <p>Из hard скиллов имею навыки в InDesign, Photoshop и Illustrator. Появилось больше умений в HTML и CSS. Ещё немножко Blender, работа с базами данных и SQL.</p>
+                        </div>
+                        <div class="card">
+                            <p>Из soft скиллов я довольно терпеливая, пунктуальная и усидчивая. Имею организационные способности и умение собратся в трудной ситуации. А также у меня много друзей и я их всех очень люблю.</p>
+                        </div>
+                   </div>
+                   <dv class="img">
+                        <img src="./img/2.jpg" alt="">
+                   </dv> 
+                </div>
+            </div>
+        </div>
+
+        
     </main>
 </body>
 </html>
