сделала блок карьеры

--- a/index.html
+++ b/index.html
@@ -112,6 +112,28 @@
                 </div>
             </div>
         </div>
+
+        <div class="section-carera">
+            <div class="container">
+                <h2>КАРЬЕРА</h2>
+                <div class="car">
+                    <div class="img">
+                        <img src="./img/3.jpg" alt="">
+                    </div>
+                    <div class="txt">
+                        <div class="card">
+                            <p>2022г. - Успешно закончила 9 класс в Шахунской МБОУ СОШ №14</p>
+                        </div>
+                        <div class="card">
+                            <p>2022-2023г. - Поступила в ГБПОУ НГК на специальность web-разработчик и успешно закончила 1 курс</p>
+                        </div>
+                        <div class="card">
+                            <p>2023-2024г. -  Прочитала книги: "Лидеры едят последними", "Кто заплачет, когда ты умрешь" и "Тренировка ума"</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 </html>
