сделала блок с контактами

--- a/index.html
+++ b/index.html
@@ -135,5 +135,16 @@
             </div>
         </div>
     </main>
+
+    <footer>
+        <div class="container">
+            <hr>
+            <div class="contakts">
+                <a href="https://vk.com/rmntsvn" class="vk"></a>
+                <a href="https://github.com/rmntsvn" class="git"></a>
+                <a href="https://t.me/rmntsvn" class="tg"></a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
