--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
                             <p>Из soft скиллов я довольно терпеливая, пунктуальная и усидчивая. Имею организационные способности и умение собратся в трудной ситуации. А также у меня много друзей и я их всех очень люблю.</p>
                         </div>
                    </div>
-                   <dv class="img">
+                   <div class="img">
                         <img src="./img/2.jpg" alt="">
-                   </dv> 
+                   </div> 
                 </div>
             </div>
         </div>
